--- a/FarmSales/Index.html
+++ b/FarmSales/Index.html
@@ -11,15 +11,14 @@
 <head>
 
     <!-- Meta-Information -->
-    <title>iZer Solutions</title>
+    <title>Farm $ales</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="iZer Solutions">
+    <meta name="description" content="Farm $ales">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap Core CSS -->
     <link href="Layout/CSS/Bootstrap.min.css" rel="stylesheet">
-    <!--link href="Layout/CSS/Bootstrap.css" rel="stylesheet"-->
 
     <!-- Our Website CSS Styles -->
     <link rel="stylesheet" href="Layout/CSS/Main.css">
@@ -28,10 +27,6 @@
 
 </head>
 <body ng-app="izerspa">
-    <!--[if lt IE 7]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-        your browser</a> to improve your experience.</p>
-    <![endif]-->
     <!-- Our Website Content Goes Here -->
     <div ng-include='"SubPages/Partials/Header.html"'></div>
     <div ng-view></div>
@@ -58,17 +53,6 @@
     <script src="Layout/JS/sir-accordion.min.js"></script>
     
     <script src="Layout/JS/Main.js"></script>
-    <script src="App-Services/authentication.service.js"></script>
-    <script src="App-Services/flash.service.js"></script>
-
-    <script src="SubPages/Login/login.controller.js"></script>
-    <script src="SubPages/Register/register.controller.js"></script>
-
-    <!-- Real user service that uses an api -->
-    <!-- <script src="app-services/user.service.js"></script> -->
-    <!-- Fake user service for demo that uses local storage -->
-    <script src="app-services/user.service.local-storage.js"></script>
-    
 
 </body >
 </html >
