--- a/FarmSales/SubPages/Investimentos.html
+++ b/FarmSales/SubPages/Investimentos.html
@@ -4,22 +4,22 @@
 
         <div class="col-lg-12">
             <h1 class="page-header">
-                Realizar Entrega
-                <small>Entregue uma mercadoria!</small>
+                Monitorar
+                <small>Acompanhe seus rendimentos!</small>
             </h1>
             <ol class="breadcrumb">
                 <li>
                     <a href="../index.html">Home</a>
                 </li>
-                <li class="active">Realizar</li>
+                <li class="active">Investimentos</li>
             </ol>
         </div>
 
     </div>
 
     <div class="row">
-        <h2>Lista de Serviços Disponíveis</h2>
-        <p>Os serviços estão ordenados por <strong>nível de urgência</strong> solicitado no cadastro da entrega, sendo <strong>1</strong> o mais baixo e <strong>3</strong> o mais alto. </p>
+        <h2>Investimentos</h2>
+        <p>Os farms estão ordenados por <strong>nível de rendimento por hora de mineração</strong>, porém a pesquisa por outros dados pode ser realizada no campo abaixo.</p>
 
         <div class="container" ng-controller="Principal">
             <div class="row">
