Atualização do Perfil e diversos outros itens.

--- a/FarmSales/Index.html
+++ b/FarmSales/Index.html
@@ -44,6 +44,7 @@
     <script src="Layout/JS/angular-route.min.js"></script>
     <script src="Layout/JS/angular-cookies.min.js"></script>
     <script src="Layout/JS/angular-sanitize.js"></script>
+
     <!--script src="Layout/JS/ui-bootstrap-tpls-2.5.0.min.js"></!--script-->
     <script src="Layout/JS/count-to.js"></script>
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
@@ -51,7 +52,10 @@
     <script src="Layout/JS/fastclick.js"></script>
     <script src="Layout/JS/velocity.min.js"></script>
     <script src="Layout/JS/sir-accordion.min.js"></script>
-    
+    <script src="Layout/JS/fusioncharts.js"></script>
+    <script src="Layout/JS/fusioncharts.theme.carbon.js"></script>
+    <script src="Layout/JS/angular-fusioncharts.min.js"></script>
+
     <script src="Layout/JS/Main.js"></script>
 
 </body >
