--- a/FarmSales/SubPages/TermosDeUso.html
+++ b/FarmSales/SubPages/TermosDeUso.html
@@ -194,5 +194,5 @@
 
     <hr />
     <br />
-    <p style="text-align:center"><strong>2017 - Copyrights</strong> iZer Solutions®</p>
+    <p style="text-align:center"><strong>2017 - Copyrights</strong> Farm$ales Co.®</p>
 </div>
