Inclusão do logo.

--- a/FarmSales/SubPages/Home.html
+++ b/FarmSales/SubPages/Home.html
@@ -2,7 +2,7 @@
 
     <div class="container">
             <div class="col-lg-12 col-md-12 col-sm-12" style="text-align:center">
-                    <img src="http://i.imgur.com/wQCoB5S.png" alt="iZer" style="margin-bottom: -160px; margin-top: -140px;">
+                    <img src="../SubPages/Images/farmsales-full.png" alt="FarmSales" style="margin-bottom: -160px; margin-top: -140px;">
             </div>
         </div>
         <!-- /.row -->
@@ -19,8 +19,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2>Projeto iZer: Colaborativo, ágil e  acessível.</h2>
-                <p>O sistema de gerenciamento de fretes que oferece vantagens à todos os envolvidos.</p>
+                <h2>Plataforma Farm$ales: Mineração de BitCoin à distância!</h2>
+                <p>O sistema de investimento em farms de criptomoedas que oferece vantagens à todos os envolvidos.</p>
                 <hr>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 </ul>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
-                <img class="img-responsive" src="http://4.bp.blogspot.com/-OC2KzWdUFMo/UJMKmeyFaLI/AAAAAAAAAUY/M5-zlUbsqfc/s1600/car-light-trails.jpg">
+                <img class="img-responsive" src="../SubPages/Images/Bitcoin-graph-chart-slant.jpg" style="max-height:350px">
             </div>
         </div>
         <!-- /.row -->
@@ -94,11 +94,11 @@
 <div class="container">
 
     <div class="row well">
-        <div class="col-lg-8 col-md-8">
-            <h4>O Projeto iZer é um sistema de serviço colaborativo, ou seja, você pode participar!</h4>
-            <p>Para mais informações sobre a utilização do sistema e de como virar um motorista, leia os termos de uso ao lado.</p>
+        <div class="col-lg-10 col-md-10">
+            <h4>A Farm$ales é uma plataforma que facilita investimentos em mineração de criptomoedas, ou seja, você pode participar!</h4>
+            <p>Para mais informações sobre a utilização do sistema e de como virar um investidor, leia os termos de uso ao lado.</p>
         </div>
-        <div class="col-lg-4 col-md-4">
+        <div class="col-lg-2 col-md-2">
             <a class="btn btn-lg btn-primary pull-right" href="#/termosdeuso">Termos de Uso</a>
         </div>
     </div>
