--- a/FarmSales/SubPages/Noticias.html
+++ b/FarmSales/SubPages/Noticias.html
@@ -13,7 +13,7 @@
                 <li>
                     <a href="../index.html">Home</a>
                 </li>
-                <li class="active">N</li>
+                <li class="active">Notícias</li>
             </ol>
         </div>
 
