Home finalizada e gráfico ajustado.

--- a/FarmSales/SubPages/Home.html
+++ b/FarmSales/SubPages/Home.html
@@ -40,14 +40,13 @@
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <h2>Diferenciais de Negócio:</h2>
                 <ul>
-                    <li>Serviço <strong>100%</strong> colaborativo</li>
-                    <li>Preços justos para seus fretes</li>
+                    <li>Plataforma <strong>inovadora</strong> para <strong>investimentos em tempo real</strong></li>
                     <li>Oportunidade de <strong>ganho</strong> para todos os usuários</li>
-                    <li>Simplicidade focando em eficiência</li>
-                    <li><strong>Aproveitamento de rotas</strong>, agilizando as entregas</li>
-                    <li>Priorização de entregas de acordo com sua urgência</li>
-                    <li>Sistema de metas e recompensas</li>
-                    <li>Sistema de <strong>comparação</strong> de preços finais (frete e produto)</li>
+                    <li>Simplicidade focando em eficiência e melhor experiência para o usuário</li>
+                    <li>Priorização de investimentos de acordo com seu atual rendimento</li>
+                    <li>BI implementada para <strong>melhor visualização dos investimentos</strong></li>
+                    <li>Informações enxutas disponibilizadas ao investidor</li>
+                    <li>Notícias disponibilizadas que podem ser relevantes aos investidores</li>
                 </ul>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
@@ -75,9 +74,7 @@
                 <ul>
                     <li>API desenvolvida para integrações externas</li>
                     <li>Hospedado no <strong>Azure</strong>, nuvem da Microsoft</li>
-                    <li>Disponível como WebApp e aplicativo Android</li>
-                    <li>Mapas e rotas traçadas pela Google Maps Directions API</li>
-                    <li>Consulta para comparações através da API do BuscaPé</li>
+                    <li>Disponível para acesso na Web e em dispositivos móveis</li>
                     <li><strong>Segurança</strong> nos pagamentos garantida pelo PagSeguro</li>
                     <li>Desenvolvimento focado em <strong>melhoria contínua</strong></li>
                 </ul>
