--- a/FarmSales/SubPages/Noticias.html
+++ b/FarmSales/SubPages/Noticias.html
@@ -6,8 +6,8 @@
 
         <div class="col-lg-12">
             <h1 class="page-header">
-                Entregadores
-                <small>Junte-se ao mundo colaborativo!</small>
+                Notícias
+                <small>Junte-se ao mundo da mineração de criptomoedas!</small>
             </h1>
             <ol class="breadcrumb">
                 <li>
@@ -33,13 +33,14 @@
     <div class="row">
 
         <div class="col-md-8">
-            <h2 class="page-header">Entregadores Cadastrados</h2>
+            <h2 class="page-header">Farms renomados</h2>
 
             <p>
-                Os entregadores responsáveis pelos fretes solicitados na plataforma são <strong>independentes</strong> e realizam os
-                serviços de acordo com o conceito de plataforma colaborativa. Esse conceito impõe várias vantagens, como horários
-                e metas definidos pelo próprio entregador, nenhum vínculo corporativo e a <strong>oportunidade de obter uma renda extra
-                realizando trajetos cotidianos!</strong>
+                Os farms disponíveis para investimento na plataforma são <strong>certificados</strong> e se moldaram ao longo dos
+                anos de maneira independente, em grande parte dos casos, porém perceberam um <strong>novo modelo de negócio</strong> possibilitado por
+                essa prática. Esse conceito impõe várias vantagens, como expansão dos farms exponencialmente através de investimentos,
+                <strong>potencializando seus ganhos</strong> de tal maneira que também contribuem para a <strong>valorização da moeda</strong> e até para a renda geral
+                dos investidores.
             </p>
         </div>
 
@@ -47,7 +48,7 @@
             <h2 class="page-header">Se Cadastre</h2>
 
             <p>
-                Clique no botão abaixo para nos enviar seu pedido. Entraremos em contato para obter mais informações e avaliar a solicitação.
+                Clique no botão abaixo para nos enviar o pedido de cadastro do seu farm. Entraremos em contato para obter mais informações e avaliar a solicitação.
             </p>
             <a class="btn btn-primary" data-toggle="modal" data-target="#formEntregador">Inscreva-se</a>
         </div>
@@ -55,7 +56,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Cadastro de Entregador</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Cadastro de Farm</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -95,8 +96,8 @@
     <div class="row">
 
         <div class="col-lg-12">
-            <h2 class="page-header">Seja um entregador <strong>iZer</strong>!
-            <small>O que é necessário?</small> </h2>
+            <h2 class="page-header">Notícias do mundo das <strong>criptomoedas</strong>
+            <small>Acompanhe os acontecimentos e potencialize seus ganhos!</small> </h2>
         </div>
 
         <div class="col-sm-4">
