Accordion e news page ajustadas.

--- a/FarmSales/Index.html
+++ b/FarmSales/Index.html
@@ -23,7 +23,8 @@
     <!-- Our Website CSS Styles -->
     <link rel="stylesheet" href="Layout/CSS/Main.css">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" type="image/x-icon" href="http://i.imgur.com/3cDr8Ay.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="SubPages/Images/farmsales-fs.png"/>
+    <!--link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
 
 </head>
 <body ng-app="izerspa">
