--- a/FarmSales/SubPages/Detalhes.html
+++ b/FarmSales/SubPages/Detalhes.html
@@ -11,21 +11,54 @@
                 <li class="active">Detalhes do Farm</li>
             </ol>
         </div>
-    <div class="col-lg-6" ng-controller="ChartController">
-        <div fusioncharts
-             width="600"
-             height="400"
-             type="mscombi2d"
-             dataSource="{{myDataSource}}">
+    <div class="row">
+        <div class="col-lg-6" ng-controller="ChartController">
+            <div fusioncharts
+                 width="600"
+                 height="400"
+                 type="mscombi2d"
+                 dataSource="{{myDataSource}}">
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div><h2 style="text-align:center; margin-top:-10px">Bitcoin Happy Farm</h2></div>
+            <div>
+                <div style="text-align:center; margin-top:30px">
+                    <img src="../SubPages/Images/woman-datacenter.jpg" alt="HappyFarm" style="width: 380px; border-radius: 150px;">
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col-lg-6">
-        <div ><h2 style="text-align:center">Avaliação Atual</h2></div>
-        <div>
-            <div style="text-align:center">
-                <span style="font-size:40px;">4</span><span style="font-size:25px;"> / </span><span style="font-size:50px;">5</span>
+    <div class="row">
+        <br/>
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
+            <div style="margin-top:60px"><h2 style="text-align:center">Avaliação Atual</h2></div>
+            <div>
+                <div style="text-align:center;margin-top:40px">
+                    <span style="font-size:40px;">4</span><span style="font-size:25px;"> / </span><span style="font-size:50px;">5</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div style="margin-top:60px"><h2 style="text-align:center">Estatísticas</h2></div>
+            <div>
+                <div style="text-align:center">
+                    <p><strong>Crescimento </strong>(após aderir à plataforma): <span style="color:green"><strong>+0.55 BTC / HORA</strong></span></p>
+                    <p><strong>Rendimentos obtidos </strong>(desde o início do investimento): 7.43 BitCoins</p>
+                    <p><strong>Variação de preço </strong>(após aderir à plataforma): <span style="color:darkred"><strong>+ R$127,93 por % do farm</strong></span></p>
+                    <p><strong>Contato: </strong>farmHappy.help@btcfarm.com</p>
+                </div>
             </div>
         </div>
     </div>
 
+</div>
+<br />
+<div class="container">
+
+    <hr />
+    <br />
+    <p style="text-align:center"><strong>2018 - Copyrights</strong> Farm$ales Co.®</p>
 </div>
