--- a/FarmSales/SubPages/Investimentos.html
+++ b/FarmSales/SubPages/Investimentos.html
@@ -54,7 +54,7 @@
             <div class="content-wrap">
                 <div class="row full-height">
                     <div id="scroller" class="col-xs-12 col-sm-12 full-height scrollable">
-                        <div id="SAC1" sir-accordion collection="accordionArray" config="accordionConfig"></div>
+                        <div id="SAC1" sir-accordion collection="accordionInvestments" config="accordionConfig2"></div>
                     </div>
                 </div>
             </div>
